--- a/css/styles.css
+++ b/css/styles.css
@@ -53,7 +53,7 @@ img {
 }
 @media (min-width: 768px) {  
     .header{
-        background-size: 45rem;
+        background-size: 50rem;
     }
 }
 @media (min-width: 992px) {  
@@ -63,8 +63,18 @@ img {
 }
 @media (min-width: 1280px) {  
     .header{
-        background-size: 130rem;
+        background-size: 110rem;
     }
+}
+@media (min-width: 768px) { 
+    .header__barra {
+        display: flex;
+        justify-content: space-between;
+    }
+}
+.header__logo{
+    width: 15rem;
+    margin: 0 auto 3rem auto;
 }
 .header__contenedor{
     max-width: 120rem;
@@ -78,12 +88,37 @@ img {
         justify-content: space-between;
     }
 }
-.header__logo{
-    width: 15rem;
-    margin: 0 auto 3rem auto;
-}
 @media (min-width: 768px) {  
     .header__logo{
         margin: 0;
+    }
+    .header__grid{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 4rem;
+    }
+}
+/* ?  */
+
+
+/* ? Navegacion */
+.navegacion{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+@media (min-width: 768px) {  
+    .navegacion{
+        flex-direction: row;
+        align-items: flex-start;
+        gap: 2rem;
+    }
+}
+.navegacion__link{
+   
+}
+@media (min-width: 768px) {  
+    .navegacion__link{
+        color: var(--blanco);
     }
 }
