--- a/css/styles.css
+++ b/css/styles.css
@@ -120,6 +120,23 @@ img {
     }
 }
 
+/* ? Header Boton */
+.header__boton{
+    background-color: var(--primario);
+    border-radius: 2rem;
+    display: block;
+    padding: 1rem;
+    text-align: center;
+    color: var(--blanco);
+    margin-bottom: 4rem;
+}
+@media (min-width: 768px) {  
+    .header__boton{
+        display: inline-block;
+        padding: 1rem 3rem;
+    }
+}
+
 
 /* ? Navegacion */
 .navegacion{
@@ -135,7 +152,7 @@ img {
     }
 }
 .navegacion__link{
-   
+   color: var(--primario);
 }
 @media (min-width: 768px) {  
     .navegacion__link{
