--- a/css/styles.css
+++ b/css/styles.css
@@ -36,7 +36,7 @@ img {
     max-width: 100%;
     display: block;
 }
-.contenedor {
+[class$="__contenedor"]{
     max-width: 120rem;
     margin: 0 auto;
     width: 90%;
@@ -75,11 +75,6 @@ img {
 .header__logo{
     width: 15rem;
     margin: 0 auto 3rem auto;
-}
-.header__contenedor{
-    max-width: 120rem;
-    margin: 0 auto;
-    width: 90%;
 }
 
 @media (min-width: 768px) {  
@@ -158,4 +153,13 @@ img {
     .navegacion__link{
         color: var(--blanco);
     }
+}
+
+/* ? Que es */
+.nucleus{
+    margin-top: 3rem;
+}
+.nucleus__heading{
+    text-align: center;
+    margin-bottom: 5rem;
 }
