--- a/css/styles.css
+++ b/css/styles.css
@@ -163,3 +163,16 @@ img {
     text-align: center;
     margin-bottom: 5rem;
 }
+.nucleus__grid{
+    /* Voltear el orden */
+    display: flex;
+    flex-direction: column-reverse;
+}
+@media (min-width: 768px) {  
+    .nucleus__grid{
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        column-gap: 5rem;
+        align-items: center;
+    }
+}
