--- a/css/styles.css
+++ b/css/styles.css
@@ -176,3 +176,29 @@ img {
         align-items: center;
     }
 }
+
+/* ? Listado */
+.listado{
+
+}
+.listado__elemento{
+    box-shadow: 0px 0px  15px 3px rgb(0 0 0 / .15);
+    border-radius: 2rem;
+    padding: 2rem;
+    margin-bottom: 5rem;
+    transition-property: transform;
+    transition-duration: 300ms;
+}
+.listado__elemento:hover{
+    transform: scale(1.1);
+}
+.listado__heading{
+    font-size: 3rem;
+    color: var(--primario);
+    margin: 0;
+}
+.listado__texto{
+    margin: 0;
+    font-size: 2rem;
+    line-height: 1.2;
+}
